[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with biotech affiliations"
authors = [
    {name = " K Dhananjaya",email = "dhanudhanu4100@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"
